[package]
name = "xiaomi-sensor-exporter"
version = "1.0.0"
authors = ["Jérémie Drouet <jeremie.drouet@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bluez = { version = "0.4" }
bytes = { version = "1.2" }
clap = { version = "4.4", features = ["derive"] }
env_logger = { version = "0.10" }
log = { version = "0.4" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
