[package]
name = "xiaomi-sensor-exporter"
description = "Server that listenes for xiaomi temperature sensors"
version = "1.1.1"
authors = ["Jérémie Drouet <jeremie.drouet@gmail.com>"]
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bluer = { version = "0.17.0", features = ["bluetoothd"] }
futures = "0.3.30"
tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "sync",
    "time",
] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[package.metadata.deb]
maintainer = "Jérémie Drouet <jeremie.drouet@gmail.com>"
copyright = "2024, Jérémie Drouet <jeremie.drouet@gmail.com>"
license-file = ["LICENSE.txt", "4"]
extended-description = "An application that will listens for Xiaomi sensor."
depends = "$auto"
section = "utility"
priority = "optional"
maintainer-scripts = "script/debian/"
assets = [
    [
        "target/release/xiaomi-sensor-exporter",
        "/usr/bin/xiaomi-sensor-exporter",
        "755",
    ],
    [
        "readme.md",
        "/usr/share/doc/xiaomi-sensor-exporter/README.md",
        "644",
    ],
    [
        "script/systemd/default",
        "/etc/default/xiaomi-sensor-exporter",
        "600",
    ],
    [
        "script/systemd/service",
        "/lib/systemd/system/xiaomi-sensor-exporter.service",
        "644",
    ],
]
